k8s/app2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app2-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2  
spec:
  rules:
  - http:
      paths:
      - path: /app2(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: app2
            port:
              number: 80
